# go/docs/swagger.json
@@ -421,7 +421,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/http.metricsHistoryRequest"
+                            "$ref": "#/definitions/models.MetricsHistoryRequest"
                         }
                     }
                 ],
@@ -798,7 +798,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/integrity.Metrics"
+                            "$ref": "#/definitions/models.Metrics"
                         }
                     }
                 ],
@@ -1233,36 +1233,7 @@
                 }
             }
         },
-        "http.metricsHistoryRequest": {
-            "type": "object",
-            "properties": {
-                "end_time": {
-                    "type": "string"
-                },
-                "interval": {
-                    "type": "string"
-                },
-                "metric_types": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "start_time": {
-                    "type": "string"
-                },
-                "symbols": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "time_range": {
-                    "type": "string"
-                }
-            }
-        },
-        "integrity.Metrics": {
+        "models.Metrics": {
             "type": "object",
             "properties": {
                 "blockedDelta": {
@@ -1297,6 +1268,35 @@
                 },
                 "timeoutCount": {
                     "type": "integer"
+                }
+            }
+        },
+        "models.MetricsHistoryRequest": {
+            "type": "object",
+            "properties": {
+                "end_time": {
+                    "type": "string"
+                },
+                "interval": {
+                    "type": "string"
+                },
+                "metric_types": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "start_time": {
+                    "type": "string"
+                },
+                "symbols": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "time_range": {
+                    "type": "string"
                 }
             }
         }
